--- a/config/database.yml
+++ b/config/database.yml
@@ -23,13 +23,13 @@ default: &default
 
 development:
   <<: *default
-  database: quiz_master_development
+  database: know_your_rep_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: quiz_master
+  #username: know_your_rep
 
   # The password associated with the postgres role (username).
   #password:
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: quiz_master_test
+  database: know_your_rep_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +80,6 @@ test:
 #
 production:
   <<: *default
-  database: quiz_master_production
-  username: quiz_master
-  password: <%= ENV['QUIZ_MASTER_DATABASE_PASSWORD'] %>
+  database: know_your_rep_production
+  username: know_your_rep
+  password: <%= ENV['KNOW_YOUR_REP_DATABASE_PASSWORD'] %>
